--- a/final/package.json
+++ b/final/package.json
@@ -10,6 +10,7 @@
   "author": "Betsalel Koginsky",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.2",
     "parcel": "^2.0.0-beta.1",
     "sass": "^1.26.10"
   },
